Update schema to include library CardAccessHours
